--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -27,5 +27,50 @@
   "statusProcessing": "Processing...",
   "progressCompleteMessage": "Results will be displayed automatically when analysis is complete.",
   "errorAnalysisMessage": "An error occurred during video analysis. Please upload again.",
-  "clickToPreview": "Click to preview"
+  "clickToPreview": "Click to preview",
+  "uploadText": "Upload video file\nto start analysis",
+  "dragDropText": "Drag & drop video file",
+  "selectFileText": "Select file",
+  "uploadButton": "Upload",
+  "cancelButton": "Cancel",
+  "selectValidVideoError": "Please select a valid video file",
+  "selectFileFirstError": "Please select a file first",
+  "uploadCompleteMessage": "Upload complete! ID:",
+  "uploadSuccessMessage": "Video uploaded successfully",
+  "uploadFailedMessage": "Upload failed",
+  "videoTitleFallback": "Video",
+  "noDescription": "(No description)",
+  "noInsight": "(No insight)",
+  "newAnalysis": "New analysis",
+  "searchChat": "Search chat",
+  "analysisHistory": "Analysis history",
+  "noVideos": "No videos",
+  "myAccount": "My account",
+  "changePassword": "Change password",
+  "signOut": "Sign out",
+  "askQuestionPlaceholder": "Let's try asking a question",
+  "logout": "Logout",
+  "login": "Login",
+  "register": "Register",
+  "emailAddress": "Email address",
+  "password": "Password",
+  "resetPassword": "Reset password",
+  "firstTimeUser": "First time using?",
+  "registerHere": "Register here",
+  "loggingIn": "Logging in...",
+  "passwordMinLength": "※Half-width alphanumeric characters, 8 or more",
+  "reenterPassword": "Re-enter password",
+  "termsOfService": "Terms of service",
+  "and": "and",
+  "pleaseConfirm": "Please confirm",
+  "agree": "I agree",
+  "registering": "Registering...",
+  "registerButton": "Register",
+  "changePasswordTitle": "Change password",
+  "currentPassword": "Current password",
+  "newPassword": "New password",
+  "reenterNewPassword": "Re-enter new password",
+  "processing": "Processing...",
+  "privacyPolicy": "Privacy Policy",
+  "accountId": "Account ID"
 }
