--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -27,5 +27,50 @@
   "statusProcessing": "処理中...",
   "progressCompleteMessage": "解析が完了すると、自動的に結果が表示されます。",
   "errorAnalysisMessage": "動画の解析中にエラーが発生しました。もう一度アップロードしてください。",
-  "clickToPreview": "クリックしてプレビュー"
+  "clickToPreview": "クリックしてプレビュー",
+  "uploadText": "動画ファイルを\nアップロードして\n解析を開始",
+  "dragDropText": "動画ファイルをドラッグ＆ドロップ",
+  "selectFileText": "ファイルを選択",
+  "uploadButton": "アップロード",
+  "cancelButton": "キャンセル",
+  "selectValidVideoError": "有効な動画ファイルを選択してください",
+  "selectFileFirstError": "まずファイルを選択してください",
+  "uploadCompleteMessage": "アップロード完了！ID:",
+  "uploadSuccessMessage": "動画が正常にアップロードされました",
+  "uploadFailedMessage": "アップロードに失敗しました",
+  "videoTitleFallback": "動画",
+  "noDescription": "(説明なし)",
+  "noInsight": "(インサイトなし)",
+  "newAnalysis": "新しい解析",
+  "searchChat": "チャットを検索",
+  "analysisHistory": "解析履歴",
+  "noVideos": "ビデオがありません",
+  "myAccount": "マイアカウント",
+  "changePassword": "パスワード変更",
+  "signOut": "サインアウト",
+  "askQuestionPlaceholder": "質問をしてみましょう",
+  "logout": "ログアウト",
+  "login": "ログイン",
+  "register": "新規登録",
+  "emailAddress": "メールアドレス",
+  "password": "パスワード",
+  "resetPassword": "パスワードを再設定する",
+  "firstTimeUser": "初めてご利用ですか?",
+  "registerHere": "新規登録はこちら",
+  "loggingIn": "ログイン中...",
+  "passwordMinLength": "※半角英字8文字以上",
+  "reenterPassword": "パスワードを再入力",
+  "termsOfService": "利用規約",
+  "and": "と",
+  "pleaseConfirm": "をご確認ください。",
+  "agree": "同意します",
+  "registering": "登録中...",
+  "registerButton": "登録する",
+  "changePasswordTitle": "パスワードを変更",
+  "currentPassword": "現在のパスワード",
+  "newPassword": "新しいパスワード",
+  "reenterNewPassword": "新しいパスワードを再入力",
+  "processing": "処理中...",
+  "privacyPolicy": "プライバシーポリシー",
+  "accountId": "アカウントID"
 }
