feat: add server-side 1080p video compression step
Add FFmpeg-based 1080p compression as the first processing step in the
video analysis pipeline. This significantly reduces file sizes (13GB+ → 1-2GB)
for large livestream recordings, improving:

- Storage costs (Azure Blob Storage)
- Download/processing time for subsequent pipeline steps
- Overall analysis throughput

Changes:
- worker/batch/video_compressor.py: New module with FFmpeg 1080p compression,
  resolution detection, and Azure Blob Storage upload for compressed files
- worker/batch/process_video.py: Insert STEP_COMPRESS_1080P before STEP_0,
  update all step indices for STEP_ORDER consistency
- worker/batch/video_status.py: Add STEP_COMPRESS_1080P status
- backend/app/utils/video_progress.py: Add compression step progress/message
- frontend/src/components/ProcessingSteps.jsx: Add compression step to UI
- frontend/src/locales/{ja,en}.json: Add compression step translations

Compression logic:
- Skips compression if video is already ≤1080p AND <2GB
- Uses H.264/libx264 with CRF 23, medium preset
- Uploads compressed file back to Blob Storage (replacing original)
- Falls back to original file if compression fails

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -12,6 +12,7 @@
   "report2Title": "Report 2: Insights",
   "statusNew": "Waiting for upload",
   "statusUploaded": "Upload completed",
+  "statusCompress": "Compressing video to 1080p...",
   "statusStep0": "Extracting frames...",
   "statusStep1": "Detecting phases...",
   "statusStep2": "Extracting metrics...",
