fix: add newUploadButton translation key to ja.json and en.json

--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -117,5 +117,6 @@
   "lcjSearchLiver": "Search Liver",
   "lcjConfirmLiver": "Link with this liver?",
   "lcjConfirmLink": "Link",
-  "lcjBack": "Back"
+  "lcjBack": "Back",
+  "newUploadButton": "Upload New Video"
 }
