--- a/frontend/src/locales/ja.json
+++ b/frontend/src/locales/ja.json
@@ -117,5 +117,6 @@
   "lcjSearchLiver": "ライバーを検索",
   "lcjConfirmLiver": "このライバーと連携しますか？",
   "lcjConfirmLink": "連携する",
-  "lcjBack": "戻る"
+  "lcjBack": "戻る",
+  "newUploadButton": "新しい動画をアップロード"
 }
